--- a/src/app/color-hue/color-hue.component.html
+++ b/src/app/color-hue/color-hue.component.html
@@ -2,6 +2,10 @@
 <hue-picker thumbStyle="tube" [color]="color" (onColorChange)="colorChanged($event)" style="height: 80px"></hue-picker>
 <alpha-picker thumbStyle="tube" [color]="color" [alpha]="alpha" (onAlphaChange)="alphaChanged($event)" style="height: 80px"></alpha-picker> -->
 
-<hue-alpha-picker  thumbStyle="tube" [color]="rgba" (onColorChange)="colorChanged($event)" style="height: 80px">
+<ngx-hue-alpha-picker  thumbStyle="dot" [color]="rgba" (onColorChange)="colorChanged($event)" style="height: 80px">
 
-</hue-alpha-picker>
+</ngx-hue-alpha-picker>
+
+<ngx-rgba-picker [color]="rgba" (onColorChange)="colorChanged($event)" style="height: 80px">
+
+</ngx-rgba-picker>
