--- a/projects/ngx-sam-color-pickers/src/lib/alpha-picker/alpha-picker.component.less
+++ b/projects/ngx-sam-color-pickers/src/lib/alpha-picker/alpha-picker.component.less
@@ -9,7 +9,7 @@
     min-height: 20px;
     min-width: 50px;
     width: 100%;
-    &.circle{
+    &.circle,&.dot{
         border-radius: 0.6em;
         height: calc(1.2em + 4px);
         .alpha-strip{
@@ -60,7 +60,7 @@
         .slider-thumb{
             height: 100%;
             position: absolute;
-            background-color: #b74343;
+            background-color: white;
             border: 2px solid white;
             width: 100%;
             transform: translateX(-50%);
