--- a/projects/ngx-sam-color-pickers/src/lib/hue-picker/hue-picker.component.less
+++ b/projects/ngx-sam-color-pickers/src/lib/hue-picker/hue-picker.component.less
@@ -8,7 +8,7 @@
     min-height: 20px;
     min-width: 50px;
     width: 100%;
-    &.circle{
+    &.circle, &.dot{
         height: calc(1.2em + 4px);
         .hue-strip{
             border-radius: 0.6em;
@@ -49,7 +49,7 @@
         .slider-thumb{
             height: 100%;
             position: absolute;
-            background-color: #b74343;
+            background-color: white;
             border: 2px solid white;
             width: 100%;
             transform: translateX(-50%);
